# debugGather

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
cmake/: build.cmake  utilities.cmake
core/: CMakeLists.txt
core/include/: constants.h  platform.h
core/linux/: platform.cpp
core/windows/: platform.cpp
utils/: CMakeLists.txt  utils.cpp
utils/include/: utils.h
